--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_SERVER_URL="host=localhost port=5432 user=postgres password=password dbname=development sslmode=disable"
+DB_SERVER_URL="host=localhost port=5432 user=postgres password=020603 dbname=postgres sslmode=disable"
