--- a/.env
+++ b/.env
@@ -1,1 +1,17 @@
+# Server settings
+SERVER_URL="0.0.0.0:5000"
+SERVER_READ_TIMEOUT=15
+SERVER_WRITE_TIMEOUT=15
+SERVER_IDLE_TIMEOUT=5
+
+# Database settings
+DB_USER="postgres"
+DB_PASSWORD="020603"
+DB_NAME="postgres"
+DB_HOST="localhost"
+
 DB_SERVER_URL="host=localhost port=5432 user=postgres password=020603 dbname=postgres sslmode=disable"
+
+DB_MAX_CONNECTIONS=100
+DB_MAX_IDLE_CONNECTIONS=10
+DB_MAX_LIFETIME_CONNECTIONS=2
