docker and docker compose set

--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
 # Server settings
-SERVER_URL="127.0.0.1:5000"
+SERVER_URL="0.0.0.0:5000"
 SERVER_READ_TIMEOUT=15
 SERVER_WRITE_TIMEOUT=15
 SERVER_IDLE_TIMEOUT=5
 
 # Database settings
 DB_USER="postgres"
-DB_PASSWORD="020603"
+DB_PASSWORD="password"
 DB_NAME="postgres"
-DB_HOST="localhost"
+DB_HOST="database"
 
-DB_SERVER_URL="host=localhost port=5432 user=postgres password=020603 dbname=postgres sslmode=disable"
+DB_SERVER_URL="postgres://postgres:password@database:5432/postgres?sslmode=disable"
 
 DB_MAX_CONNECTIONS=100
 DB_MAX_IDLE_CONNECTIONS=10
