--- a/.env
+++ b/.env
@@ -4,14 +4,22 @@ SERVER_READ_TIMEOUT=15
 SERVER_WRITE_TIMEOUT=15
 SERVER_IDLE_TIMEOUT=5
 
-# Database settings
-DB_USER="postgres"
-DB_PASSWORD="password"
-DB_NAME="postgres"
-DB_HOST="database"
+# JWT
+JWT_SECRET_KEY="secret"
 
-DB_SERVER_URL="postgres://postgres:password@database:5432/postgres?sslmode=disable"
+# Postgres database settings
+DB_USER="postgres"
+DB_PASSWORD="020603"
+DB_NAME="postgres"
+
+DB_SERVER_URL="postgres://postgres:020603@database:5432/postgres?sslmode=disable"
 
 DB_MAX_CONNECTIONS=100
 DB_MAX_IDLE_CONNECTIONS=10
 DB_MAX_LIFETIME_CONNECTIONS=2
+
+# Mongo database settings
+DB_MONGO_URI="mongodb://mongo:27017"
+
+MONGO_USER="root"
+MONGO_PASSWORD="example"
