Authorization and JWT update, one service - one db pattern followed

--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ JWT_SECRET_KEY="secret"
 
 # Postgres database settings
 DB_USER="postgres"
-DB_PASSWORD="020603"
+DB_PASSWORD="password"
 DB_NAME="postgres"
 
-DB_SERVER_URL="postgres://postgres:020603@database:5432/postgres?sslmode=disable"
+DB_SERVER_URL="postgres://postgres:password@database:5432/postgres?sslmode=disable"
 
 DB_MAX_CONNECTIONS=100
 DB_MAX_IDLE_CONNECTIONS=10
