--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Server settings
-SERVER_URL="0.0.0.0:5000"
+SERVER_URL="0.0.0.0:5001"
 SERVER_READ_TIMEOUT=15
 SERVER_WRITE_TIMEOUT=15
 SERVER_IDLE_TIMEOUT=5
@@ -19,7 +19,7 @@ DB_MAX_IDLE_CONNECTIONS=10
 DB_MAX_LIFETIME_CONNECTIONS=2
 
 # Mongo database settings
-DB_MONGO_URI="mongodb://mongo:27017"
+DB_MONGO_URI="mongodb://localhost:27017"
 
 MONGO_USER="root"
 MONGO_PASSWORD="example"
