--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ DB_MAX_IDLE_CONNECTIONS=10
 DB_MAX_LIFETIME_CONNECTIONS=2
 
 # Mongo database settings
-DB_MONGO_URI="mongodb://mongo:27017"
+DB_MONGO_URI="mongodb://localhost:27017"
 
 MONGO_USER="root"
 MONGO_PASSWORD="example"
